--- a/index.html
+++ b/index.html
@@ -36,5 +36,9 @@
             <div class="no4">Автор</div><br>
             <div class="no5">Александр</div>
         </div>
+        <ul class="jika">
+            <li class="promo1"><input type="text" placeholder="Промокод" class="kill0" id="bu1"><button class="reg0">✔</button></li>
+            <li class="promo2"><input type="text" placeholder="Сохранение" class="kill1" id="bu2"><button class="re1"></button></li>
+        </ul>  
     </body>
 </html>
