--- a/index.html
+++ b/index.html
@@ -7,38 +7,28 @@
         <script src="Normal3.js"></script>
     </head>
     <body>
-        <div>
-            <div class="nor1">ZagorCombat</div><br>
-            <div class="nor5">Кликер</div>
-            <div>
+        <div class="gera">
+            <div class="mod1">
+                <div class="nor1">ZagorCombat</div><br>
+                <div class="nor5">Кликер</div>
                 <button class="image-button"></button>
+                <div class="nor2">Баланс: 50<br>Кейс 0$-200$</div>
+                <button class="nor3">Цена 100$</button><br>
+                <input type="text" placeholder="Промокод" class="kill0" id="bu1"><button class="reg0">✔</button>
             </div>
-            <div class="nor2">Баланс: 50<br>Кейс 50$-200$</div>
-            <div>
-                <button class="nor3">Цена 100$</button>
-            </div>
-        </div>
-        <div class="lol56">
-            <div class="not1">Прибаль за клик</div><br>
-            <div class="not0"> >>> 1 <<< </div>
-            <div class="no1">Цена: 10$</div>
-            <div>
+            <div class="mod2">
+                <div class="not1">Прибаль за клик</div><br>
+                <div class="not0"> >>> 1 <<< </div>
+                <div class="no1">Цена: 10$</div>
                 <button class="lo1">+1 в клик</button>
-            </div>
-            <div class="no2">Цена: 20$</div>
-            <div>
+                <div class="no2">Цена: 20$</div>
                 <button class="lo2">+2 в клик</button>
-            </div>
-            <div class="no3">Цена: 50$</div>
-            <div>
+                <div class="no3">Цена: 50$</div>
                 <button class="lo3">+5 в клик</button>
-            </div>
-            <div class="no4">Автор</div><br>
-            <div class="no5">Александр</div>
-        </div>
-        <ul class="jika">
-            <li class="promo1"><input type="text" placeholder="Промокод" class="kill0" id="bu1"><button class="reg0">✔</button></li>
-            <li class="promo2"><input type="text" placeholder="Сохранение" class="kill1" id="bu2"><button class="re1"></button></li>
-        </ul>  
+                <div class="no4">Автор</div><br>
+                <div class="no5">Александр</div>
+                <input type="text" placeholder="Сохранение" class="kill1" id="bu2"><button class="re1"></button>
+            </div> 
+        </div> 
     </body>
 </html>
