--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
                 <div class="not1">Прибаль за клик</div><br>
                 <div class="not0"> >>> 1 <<< </div>
                 <div class="no1">Цена: 10$</div>
-                <button class="lo1">+1 в клик</button>
+                <button class="lo1">+1 к клик</button>
                 <div class="no2">Цена: 20$</div>
-                <button class="lo2">+2 в клик</button>
+                <button class="lo2">+2 к клик</button>
                 <div class="no3">Цена: 50$</div>
-                <button class="lo3">+5 в клик</button>
+                <button class="lo3">+5 к клик</button>
                 <div class="no4">Автор</div><br>
                 <div class="no5">Александр</div>
                 <input type="text" placeholder="Сохранение" class="kill1" id="bu2"><button class="re1"></button>
