--- a/index.html
+++ b/index.html
@@ -9,25 +9,32 @@
     <body>
         <div class="gera">
             <div class="mod1">
-                <div class="nor1">ZagorCombat</div><br>
+                <div class="nor1" id="polk1">ZagorCombat</div><br>
                 <div class="nor5">Кликер</div>
                 <button class="image-button"></button>
-                <div class="nor2">Баланс: 50<br>Кейс 0$-200$</div>
-                <button class="nor3">Цена 100$</button><br>
-                <input type="text" placeholder="Промокод" class="kill0" id="bu1"><button class="reg0">✔</button>
+                <div class="nor2">Баланс: 50</div>
+                <button class="no90" id="ik2"><a href="#polk2">===></a></button>
             </div>
             <div class="mod2">
-                <div class="not1">Прибаль за клик</div><br>
+                <div class="not1" id="polk2">Прибаль за таб</div><br>
                 <div class="not0"> >>> 1 <<< </div>
                 <div class="no1">Цена: 10$</div>
                 <button class="lo1">+1 к клик</button>
                 <div class="no2">Цена: 20$</div>
                 <button class="lo2">+2 к клик</button>
                 <div class="no3">Цена: 50$</div>
-                <button class="lo3">+5 к клик</button>
+                <button class="lo3">+5 к клик</button><br><br>
+                <button class="no09" id="ik1"><a href="#polk1"><===</a></button><button class="no09" id="ik3"><a href="#polk3">===></a></button>
+            </div>
+            <div class="mod3" id="polk3">
+                <span class="nor1">Другое</span><br>
+                <span class="nor1">Кейс 0$-200$</span><br>
+                <button class="nor3">Цена 100$</button><br>
+                <input type="text" placeholder="Промокод" class="kill0" id="bu1" ><button class="reg0">✔</button><br>
+                <input type="text" placeholder="Сохранение" class="kill1" id="bu2"><button class="re1"></button><br><br>
                 <div class="no4">Автор</div><br>
                 <div class="no5">Александр</div>
-                <input type="text" placeholder="Сохранение" class="kill1" id="bu2"><button class="re1"></button>
+                <button class="no90" id="ik2"><a href="#polk2"><===</a></button>
             </div> 
         </div> 
     </body>
