--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <div class="nor5">Кликер</div>
                 <button class="image-button"></button>
                 <div class="nor2">Баланс: 50</div>
-                <button class="no90" id="ik2"><a href="#polk2">===></a></button>
+                <a href="#polk2"><button class="no90" id="ik2">===></button></a>
             </div>
             <div class="mod2">
                 <div class="not1" id="polk2">Прибаль за таб</div><br>
@@ -24,7 +24,7 @@
                 <button class="lo2">+2 к клик</button>
                 <div class="no3">Цена: 50$</div>
                 <button class="lo3">+5 к клик</button><br><br>
-                <button class="no09" id="ik1"><a href="#polk1"><===</a></button><button class="no09" id="ik3"><a href="#polk3">===></a></button>
+                <a href="#polk1"><button class="no09" id="ik1"><===</button></a><a href="#polk3"><button class="no09" id="ik3">===></button></a>
             </div>
             <div class="mod3" id="polk3">
                 <span class="nor1">Другое</span><br>
@@ -34,7 +34,7 @@
                 <input type="text" placeholder="Сохранение" class="kill1" id="bu2"><button class="re1"></button><br><br>
                 <div class="no4">Автор</div><br>
                 <div class="no5">Александр</div>
-                <button class="no90" id="ik2"><a href="#polk2"><===</a></button>
+                <a href="#polk2"><button class="no90" id="ik2"><===</button></a>
             </div> 
         </div> 
     </body>
