--- a/index.html
+++ b/index.html
@@ -8,15 +8,14 @@
     </head>
     <body>
         <div class="gera">
-            <div class="mod1">
-                <div class="nor1" id="polk1">ZagorCombat</div><br>
+            <div class="mod1" id="polk1">
+                <div class="nor1">ZagorCombat</div><br>
                 <div class="nor5">Кликер</div>
                 <button class="image-button"></button>
                 <div class="nor2">Баланс: 50</div>
-                <a href="#polk2"><button class="no90" id="ik2">===></button></a>
             </div>
-            <div class="mod2">
-                <div class="not1" id="polk2">Прибаль за таб</div><br>
+            <div class="mod2"  id="polk2">
+                <div class="not1">Прибаль за таб</div><br>
                 <div class="not0"> >>> 1 <<< </div>
                 <div class="no1">Цена: 10$</div>
                 <button class="lo1">+1 к клик</button>
@@ -24,7 +23,6 @@
                 <button class="lo2">+2 к клик</button>
                 <div class="no3">Цена: 50$</div>
                 <button class="lo3">+5 к клик</button><br><br>
-                <a href="#polk1"><button class="no09" id="ik1"><===</button></a><a href="#polk3"><button class="no09" id="ik3">===></button></a>
             </div>
             <div class="mod3" id="polk3">
                 <span class="nor1">Другое</span><br>
@@ -34,8 +32,12 @@
                 <input type="text" placeholder="Сохранение" class="kill1" id="bu2"><button class="re1"></button><br><br>
                 <div class="no4">Автор</div><br>
                 <div class="no5">Александр</div>
-                <a href="#polk2"><button class="no90" id="ik2"><===</button></a>
             </div> 
+            <div>
+                <a href="#polk1"><img src="https://cdn.icon-icons.com/icons2/936/PNG/512/home_icon-icons.com_73532.png" alt="" class="img1"></a>
+                <a href="#polk2"><img src="https://cdn-icons-png.freepik.com/512/6623/6623356.png" alt="" class="img2"></a>
+                <a href="#polk3"><img src="https://cdn-icons-png.flaticon.com/512/61/61099.png" alt="" class="img3"></a>
+            </div>
         </div> 
     </body>
 </html>
