--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <div class="nor1">ZagorCombat</div><br>
                 <div class="nor5">Кликер</div>
                 <button class="image-button"></button>
-                <div class="nor2">Баланс: 50</div>
+                <div class="nor2">Баланс: 50</div><br><br><br><br><br>
             </div>
             <div class="mod2"  id="polk2">
                 <div class="not1">Прибаль за таб</div><br>
@@ -22,7 +22,7 @@
                 <div class="no2">Цена: 20$</div>
                 <button class="lo2">+2 к клик</button>
                 <div class="no3">Цена: 50$</div>
-                <button class="lo3">+5 к клик</button><br><br>
+                <button class="lo3">+5 к клик</button><br><br><br><br><br><br><br>
             </div>
             <div class="mod3" id="polk3">
                 <span class="nor1">Другое</span><br>
@@ -31,9 +31,9 @@
                 <input type="text" placeholder="Промокод" class="kill0" id="bu1" ><button class="reg0">✔</button><br>
                 <input type="text" placeholder="Сохранение" class="kill1" id="bu2"><button class="re1"></button><br><br>
                 <div class="no4">Автор</div><br>
-                <div class="no5">Александр</div>
+                <div class="no5">Александр</div><br><br><br><br><br><br><br>
             </div> 
-            <div>
+            <div class="ima">
                 <a href="#polk1"><img src="https://cdn.icon-icons.com/icons2/936/PNG/512/home_icon-icons.com_73532.png" alt="" class="img1"></a>
                 <a href="#polk2"><img src="https://cdn-icons-png.freepik.com/512/6623/6623356.png" alt="" class="img2"></a>
                 <a href="#polk3"><img src="https://cdn-icons-png.flaticon.com/512/61/61099.png" alt="" class="img3"></a>
